--- a/insure/main.css
+++ b/insure/main.css
@@ -4,7 +4,9 @@ body {
   line-height: 1.6;
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
   font-family: "DM Serif Display", serif;
   font-weight: 400;
 }
@@ -13,8 +15,16 @@ a {
   text-decoration: none;
 }
 
-#close, #menu {
+#close,
+#menu {
   display: none;
+}
+
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .header {
@@ -32,20 +42,16 @@ a {
   height: 100%;
 }
 
-.header #show, .header #close {
+.header #show,
+.header #close {
   margin-left: auto;
-}
-
-*, *:before, *:after {
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
 }
 
 .menu {
   background-color: #837d87;
   height: 70vh;
   background-image: url(images/bg-pattern-mobile-nav.svg);
-  background-position: bottom;
+  background-position: bottom right;
   background-repeat: no-repeat;
 }
 
@@ -85,10 +91,84 @@ a {
   color: #837d87;
 }
 
+@media (min-width: 64rem) {
+  .header_wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    max-width: 1440px;
+    width: 100%;
+    margin: auto;
+    padding: 2rem 5rem;
+  }
+  #close,
+  #show {
+    display: none;
+    margin: 0px;
+  }
+  #menu {
+    height: inherit;
+    background-image: none;
+    display: block;
+    background-color: white;
+    margin-left: auto;
+  }
+  #menu ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 100%;
+    margin: 0;
+  }
+  #menu ul li {
+    margin-top: auto;
+    margin-left: 0px;
+  }
+  #menu ul li a {
+    color: black;
+    padding: 0rem 2rem;
+    white-space: nowrap;
+  }
+  #menu ul li:last-child {
+    border: 2px solid;
+    border-color: white;
+    border: 2px solid;
+    border-color: black;
+  }
+  #menu ul li:last-child:hover {
+    border: 2px solid;
+    background-color: white;
+  }
+  #menu ul li:last-child:hover a {
+    color: #837d87;
+  }
+  .header {
+    display: inline-block;
+  }
+}
+
 .into_img {
   width: 100%;
   margin: auto 0;
   padding: 0px;
+}
+
+.big_into_img {
+  display: none;
 }
 
 button {
@@ -118,6 +198,67 @@ button:hover {
   background-repeat: no-repeat;
 }
 
+.right-into-image,
+.left-into-image {
+  display: none;
+}
+
+@media (min-width: 64rem) {
+  .big_into_img {
+    display: inline-block;
+  }
+  .wide_color {
+    position: relative;
+  }
+  .wide_color .right-into-image {
+    position: absolute;
+    right: 0;
+    display: inline-block;
+    z-index: 1000;
+  }
+  .wide_color .left-into-image {
+    position: absolute;
+    display: inline-block;
+    left: 0;
+    bottom: -10rem;
+  }
+  .into_img {
+    display: none;
+  }
+}
+
+@media (min-width: 64rem) {
+  .humanizing {
+    margin: auto 0;
+    background-image: none;
+    text-align: left;
+    padding-bottom: 6rem;
+  }
+  .humanizing h1 {
+    font-size: 6rem;
+    line-height: 1;
+  }
+  .wide_color {
+    background-color: #2d2640;
+  }
+  .humanizing_wrapper {
+    max-width: 1440px;
+    margin: 0 auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    background-color: #2d2640;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .humanizing_wrapper .big_into_img {
+    position: relative;
+    top: 8rem;
+  }
+}
+
 .pros {
   position: relative;
   padding: 7rem 1.5rem;
@@ -141,9 +282,50 @@ button:hover {
 }
 
 .pros h3 {
-  padding-top: 2rem;
   font-weight: 400;
   font-size: 2rem;
+}
+
+.pros img {
+  padding-top: 5rem;
+}
+
+@media (min-width: 64rem) {
+  .pros {
+    padding: 7rem 0em;
+    text-align: left;
+    max-width: 1440px;
+    margin: 0 auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-top: 10rem;
+  }
+  .pros hr {
+    float: left;
+    margin: 0;
+    width: 20%;
+  }
+  .pros .r-img {
+    display: none;
+  }
+  .pros .columns {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .pros .columns .column {
+    width: 33.333333%;
+    padding-right: 10px;
+  }
 }
 
 .how-work {
@@ -163,6 +345,45 @@ button:hover {
   font-family: "DM Serif Display", serif;
 }
 
+@media (min-width: 64rem) {
+  .how-work {
+    background-image: url(images/bg-pattern-how-we-work-desktop.svg);
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    background-size: 58% auto;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    max-width: 1440px;
+    margin: 0 auto;
+    padding: 5rem;
+    margin-bottom: 9rem;
+  }
+  .how-work h2 {
+    width: 50%;
+    font-size: 3rem;
+    text-align: left;
+  }
+  .how-work a {
+    margin-left: auto;
+    float: right;
+  }
+  .how-work a button {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-left: auto;
+    padding: 1rem 3rem;
+    white-space: nowrap;
+    background-color: transparent;
+  }
+}
+
 .icons {
   background-image: url(images/bg-pattern-footer-mobile.svg);
   background-position: top;
@@ -180,14 +401,47 @@ button:hover {
   padding: 9px;
 }
 
+@media (min-width: 64rem) {
+  .icons {
+    padding-left: 0;
+    padding-right: 0;
+    background-image: none;
+    max-width: 1440px;
+    margin: 0 auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .icons img {
+    height: 2rem;
+  }
+  .icons .small {
+    margin-left: auto;
+    padding-top: 0;
+  }
+  .icons .small img {
+    height: 2em;
+  }
+}
+
+.footer,
+.footer_hr {
+  width: 80%;
+  margin: 0 auto;
+}
+
 .footer {
   background-position: right top;
   background-repeat: no-repeat;
+  margin: 0 auto;
   text-align: center;
-}
-
-.footer hr {
-  width: 80%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .footer .column {
@@ -214,7 +468,60 @@ button:hover {
   font-weight: 700;
 }
 
+@media (min-width: 64rem) {
+  .footer_wrapper {
+    background-color: #fafafa;
+    padding-bottom: 5rem;
+    background-image: url(images/bg-pattern-footer-desktop.svg);
+    background-position: top left;
+    background-repeat: no-repeat;
+  }
+  .footer_hr {
+    max-width: 1440px;
+    display: block;
+  }
+  .footer {
+    margin: 0 auto;
+    margin-top: 3rem;
+    max-width: 1440px;
+    text-align: left;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .footer .column {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 25%;
+  }
+  .footer .column .title {
+    padding: 1rem;
+    padding-left: 0;
+  }
+}
+
 .attribution {
   padding: 3rem;
+}
+
+html {
+  font-size: 100%;
+}
+
+/* Medium screens (640px) */
+@media (min-width: 40rem) {
+  html {
+    font-size: 112%;
+  }
+}
+
+/* Large screens (1024px) */
+@media (min-width: 64rem) {
+  html {
+    font-size: 120%;
+  }
 }
 /*# sourceMappingURL=main.css.map */
